[gd_scene load_steps=3 format=2]

[ext_resource path="res://ArtAssets/SpriteFrames/Props/Tree.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scripts/PropScripts/Tree.gd" type="Script" id=2]

[node name="Tree" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -250 )
frames = ExtResource( 1 )
animation = "Forest"

[node name="DesertCollider" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -1, 101, -38, 110, -60, 108, -62, 96, -98, 80, -101, 70, -75, 53, -72, 41, -55, 36, -46, 21, 32, 21, 44, 41, 67, 64, 67, 71, 46, 76, 33, 89, 25, 105, 16, 109 )
disabled = true

[node name="ForestCollider" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 14, 77, -21, 59, -50, 54, -83, 53, -84, 29, -64, 10, -57, -9, 71, -9, 75, 11, 91, 26, 94, 42, 59, 48, 49, 58, 33, 63, 22, 77 )
disabled = true

[node name="JungleCollider" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 34, 85, 1, 104, -17, 89, -39, 84, -34, 66, -48, 54, -34, 33, 92, 34, 99, 39, 107, 43, 110, 55, 104, 63, 94, 65, 89, 75, 77, 77, 74, 90, 66, 94 )
disabled = true

[node name="WetCollider" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 19, 167, -13, 136, -50, 125, -77, 131, -147, 127, -187, 58, -214, 63, -255, 44, -322, 35, -325, 21, -255, -21, -219, -88, 187, -85, 289, -61, 276, -32, 241, -23, 221, -14, 269, 16, 289, 49, 280, 74, 119, 99, 88, 118, 46, 146, 37, 163 )
disabled = true
